Adding ProductImage feature
