# src/main/java/com/example/products/model/ProductResponse.java
@@ -3,6 +3,8 @@ package com.example.products.model;
 import lombok.*;
 
 import java.math.BigDecimal;
+import java.util.ArrayList;
+import java.util.List;
 
 @Data
 @Builder
@@ -14,4 +16,7 @@ public class ProductResponse {
     private String name;
     private String description;
     private BigDecimal price;
+
+    @Builder.Default
+    private List<ImageResponse> images = new ArrayList<>();
 }
