# src/main/resources/openapi.yaml
@@ -6,6 +6,57 @@ servers:
 - url: http://localhost:8080
   description: Generated server url
 paths:
+  /api/products/{productId}/images/{imageId}:
+    put:
+      tags:
+      - product-image-controller
+      operationId: updateDisplayOrder
+      parameters:
+      - name: productId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      - name: imageId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/DisplayOrderRequest"
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ImageResponse"
+    delete:
+      tags:
+      - product-image-controller
+      operationId: deleteImage
+      parameters:
+      - name: productId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      - name: imageId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: OK
   /api/products/{id}:
     get:
       tags:
@@ -94,8 +145,78 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/ProductResponse"
+  /api/products/{productId}/images:
+    get:
+      tags:
+      - product-image-controller
+      operationId: getImages
+      parameters:
+      - name: productId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/ImageResponse"
+    post:
+      tags:
+      - product-image-controller
+      operationId: addImages
+      parameters:
+      - name: productId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ImageRequest"
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/ImageResponse"
 components:
   schemas:
+    DisplayOrderRequest:
+      type: object
+      properties:
+        displayOrder:
+          type: integer
+          format: int32
+          minimum: 0
+      required:
+      - displayOrder
+    ImageResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        productId:
+          type: integer
+          format: int64
+        url:
+          type: string
+        displayOrder:
+          type: integer
+          format: int32
     ProductRequest:
       type: object
       properties:
@@ -122,3 +243,19 @@ components:
           type: string
         price:
           type: number
+        images:
+          type: array
+          items:
+            $ref: "#/components/schemas/ImageResponse"
+    ImageRequest:
+      type: object
+      properties:
+        urls:
+          type: array
+          items:
+            type: string
+            minLength: 1
+            pattern: https?://.*
+          minItems: 1
+      required:
+      - urls
